--- a/style.css
+++ b/style.css
@@ -3,3 +3,65 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+header {
+  height: 50px;
+  background-color: #FF9A4B;
+}
+
+main {
+  width: 960px;
+  margin: 50px auto;
+  display: flex;
+}
+
+.container {
+  width: 300px;
+  margin-right: 30px;
+  padding: 10px;
+  background-color: #EEEEEE;
+  position: relative;
+}
+
+.container:last-child {
+  margin-right: 0;
+}
+
+.step-img1 {
+  background-image: url(img/flow01.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.step-img2 {
+  background-image: url(img/flow02.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.step-img3 {
+  background-image: url(img/flow03.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.step-logo {
+  position: absolute;
+  background-color: #FF9A4B;
+  color: white;
+  top: 0px;
+  left: 0px;
+  padding: 3px;
+}
+
+.title {
+  margin: 15px 0 5px;
+}
+
+footer {
+  height: 50px;
+  background-color: #AAAAAA;
+}
